--- a/A-bib.bib
+++ b/A-bib.bib
@@ -88,6 +88,18 @@
 % ? unused Call number ("GV1048 .A55 2010")
 % ? unused Library catalog ("Library of Congress ISBN")
 
+@online{asgreen2021,
+  title = {Afternoon {{Ride}}},
+  author = {Asgreen, Kasper},
+  date = {2021},
+  url = {https://www.strava.com/activities/5699365509},
+  urldate = {2022-02-19},
+  organization = {{Strava}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\R75ZEIYD\\5699365509.html}
+}
+% == BibLateX quality report for asgreen2021:
+% ? Title looks like it was stored in title-case in Zotero
+
 @online{ashtiani2021,
   title = {Optimal {{Pacing}} of a {{Cyclist}} in a {{Time Trial Based}} on {{Individualized Models}} of {{Fatigue}} and {{Recovery}}},
   author = {Ashtiani, Faraz and Sreedhara, Vijay Sarthy M. and Vahidi, Ardalan and Hutchison, Randolph and Mocko, Gregory},
@@ -575,6 +587,16 @@
 % == BibLateX quality report for hughmorton1996:
 % Unexpected field 'publisher'
 % ? unused Library catalog ("Taylor and Francis+NEJM")
+
+@online{jeffb2019,
+  title = {Is There a Way to Approximate the Density of Air during Rain?},
+  author = {{jeffB}},
+  date = {2019},
+  url = {https://earthscience.stackexchange.com/questions/16921/is-there-a-way-to-approximate-the-density-of-air-during-rain},
+  urldate = {2022-02-21},
+  organization = {{Earth Science Stack Exchange}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\MKRIDC3H\\is-there-a-way-to-approximate-the-density-of-air-during-rain.html}
+}
 
 @article{johnson2007,
   title = {Inspiratory Muscle Training Improves Cycling Time-Trial Performance and Anaerobic Work Capacity but Not Critical Power},
@@ -1271,6 +1293,18 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for sreedhara2019:
 % ? unused Library catalog ("BioMed Central")
 
+@online{stanbrough2009,
+  title = {An {{Unbanked Turn}}},
+  author = {Stanbrough, J. L.},
+  date = {2009},
+  url = {http://www.batesville.k12.in.us/physics/phynet/mechanics/circular%20motion/an_unbanked_turn.htm},
+  urldate = {2022-02-19},
+  organization = {{Introductory Physics}},
+  file = {C\:\\Users\\madie\\Zotero\\storage\\LCEHWU4A\\an_unbanked_turn.html}
+}
+% == BibLateX quality report for stanbrough2009:
+% ? Title looks like it was stored in title-case in Zotero
+
 @online{theeditorsofencyclopaediabritannica2021,
   title = {Time {{Trial}}},
   author = {{The Editors of Encyclopaedia Britannica}},
@@ -1462,16 +1496,6 @@ Cycling performance,ventilatory threshold,VO2 max},
 % Exactly one of 'date' / 'year' must be present
 % ? Title looks like it was stored in title-case in Zotero
 
-@online{zotero-1217,
-  title = {Afternoon {{Ride}} | {{Ride}} | {{Strava}}},
-  url = {https://www.strava.com/activities/5699365509},
-  urldate = {2022-02-19},
-  file = {C\:\\Users\\madie\\Zotero\\storage\\R75ZEIYD\\5699365509.html}
-}
-% == BibLateX quality report for zotero-1217:
-% Exactly one of 'date' / 'year' must be present
-% ? Title looks like it was stored in title-case in Zotero
-
 @online{zotero-1219,
   title = {Fuji Speedway(Short-Cut Course) | {{Strava Ride Segment}} in 小山町, 静岡県, {{Japan}}},
   url = {https://www.strava.com/segments/1660077},
@@ -1496,16 +1520,6 @@ Cycling performance,ventilatory threshold,VO2 max},
 }
 % == BibLateX quality report for zotero-1223:
 % Exactly one of 'date' / 'year' must be present
-
-@online{zotero-1237,
-  title = {An {{Unbanked Turn}}},
-  url = {http://www.batesville.k12.in.us/physics/phynet/mechanics/circular%20motion/an_unbanked_turn.htm},
-  urldate = {2022-02-19},
-  file = {C\:\\Users\\madie\\Zotero\\storage\\LCEHWU4A\\an_unbanked_turn.html}
-}
-% == BibLateX quality report for zotero-1237:
-% Exactly one of 'date' / 'year' must be present
-% ? Title looks like it was stored in title-case in Zotero
 
 @online{zotero-1242,
   title = {How Many Meters Make up a Degree of Longitude/Latitude on {{Earth}}?},
@@ -1578,16 +1592,6 @@ Cycling performance,ventilatory threshold,VO2 max},
 % == BibLateX quality report for zotero-1325:
 % Exactly one of 'date' / 'year' must be present
 % ? Title looks like it was stored in title-case in Zotero
-
-@online{zotero-1330,
-  title = {Precipitation - {{Is}} There a Way to Approximate the Density of Air during Rain?},
-  url = {https://earthscience.stackexchange.com/questions/16921/is-there-a-way-to-approximate-the-density-of-air-during-rain},
-  urldate = {2022-02-21},
-  organization = {{Earth Science Stack Exchange}},
-  file = {C\:\\Users\\madie\\Zotero\\storage\\MKRIDC3H\\is-there-a-way-to-approximate-the-density-of-air-during-rain.html}
-}
-% == BibLateX quality report for zotero-1330:
-% Exactly one of 'date' / 'year' must be present
 
 
 % Required packages:
